--- a/languages/lazaruside.de.po
+++ b/languages/lazaruside.de.po
@@ -253,7 +253,7 @@ msgid "(unknown macro: %s)"
 msgstr "(unbekanntes Makro: %s)"
 
 #: lazarusidestrconsts:lislazarusversionstring
-msgid "0.9.5 beta"
+msgid "0.9.7 beta"
 msgstr ""
 
 #: lazarusidestrconsts:lisa2pchooseanexistingfile
@@ -262,6 +262,10 @@ msgstr "<Datei auswaehlen>"
 
 #: lazarusidestrconsts:lisctdefnovariableselected
 msgid "<no variable selected>"
+msgstr ""
+
+#: lazarusidestrconsts:lisacannotholdtcontrolsyoucanonlyputnonvisualcomponen
+msgid "A %s can not hold TControls.%sYou can only put non visual components on it."
 msgstr ""
 
 #: lazarusidestrconsts:lisafilealreadyexistsreplaceit
@@ -3518,10 +3522,6 @@ msgstr ""
 
 #: lazarusidestrconsts:lislazaruseditorv
 msgid "Lazarus Editor v%s"
-msgstr ""
-
-#: lazarusidestrconsts:lislazarusprojectinfolpilpiallfiles
-msgid "Lazarus Project Info (*.lpi)|*.lpi|All Files|*.*"
 msgstr ""
 
 #: lazarusidestrconsts:locwndsrceditor
