--- a/languages/lazaruside.fr.po
+++ b/languages/lazaruside.fr.po
@@ -253,7 +253,7 @@ msgid "(unknown macro: %s)"
 msgstr "(macro inconnue: %s)"
 
 #: lazarusidestrconsts:lislazarusversionstring
-msgid "0.9.5 beta"
+msgid "0.9.7 beta"
 msgstr ""
 
 #: lazarusidestrconsts:lisa2pchooseanexistingfile
@@ -263,6 +263,10 @@ msgstr "<choisir un fichier existant>"
 #: lazarusidestrconsts:lisctdefnovariableselected
 msgid "<no variable selected>"
 msgstr "<aucune variable choisie>"
+
+#: lazarusidestrconsts:lisacannotholdtcontrolsyoucanonlyputnonvisualcomponen
+msgid "A %s can not hold TControls.%sYou can only put non visual components on it."
+msgstr ""
 
 #: lazarusidestrconsts:lisafilealreadyexistsreplaceit
 msgid "A file %s%s%s already exists.%sReplace it?"
@@ -3519,10 +3523,6 @@ msgstr "Répertoire Lazarus"
 #: lazarusidestrconsts:lislazaruseditorv
 msgid "Lazarus Editor v%s"
 msgstr "Editeur Lazarus v%s"
-
-#: lazarusidestrconsts:lislazarusprojectinfolpilpiallfiles
-msgid "Lazarus Project Info (*.lpi)|*.lpi|All Files|*.*"
-msgstr "Info projet Lazarus (*.lpi)|*.lpi|All Files|*.*"
 
 #: lazarusidestrconsts:locwndsrceditor
 msgid "Lazarus Source Editor"
