--- a/languages/lazaruside.itiso.po
+++ b/languages/lazaruside.itiso.po
@@ -253,7 +253,7 @@ msgid "(unknown macro: %s)"
 msgstr "(macro sconosciuta: %s)"
 
 #: lazarusidestrconsts:lislazarusversionstring
-msgid "0.9.5 beta"
+msgid "0.9.7 beta"
 msgstr ""
 
 #: lazarusidestrconsts:lisa2pchooseanexistingfile
@@ -263,6 +263,10 @@ msgstr "<scegliere un file esistente>"
 #: lazarusidestrconsts:lisctdefnovariableselected
 msgid "<no variable selected>"
 msgstr "<nessuna variabile selezionata>"
+
+#: lazarusidestrconsts:lisacannotholdtcontrolsyoucanonlyputnonvisualcomponen
+msgid "A %s can not hold TControls.%sYou can only put non visual components on it."
+msgstr ""
 
 #: lazarusidestrconsts:lisafilealreadyexistsreplaceit
 msgid "A file %s%s%s already exists.%sReplace it?"
@@ -3519,10 +3523,6 @@ msgstr ""
 #: lazarusidestrconsts:lislazaruseditorv
 msgid "Lazarus Editor v%s"
 msgstr "Editor Lazarus v%s"
-
-#: lazarusidestrconsts:lislazarusprojectinfolpilpiallfiles
-msgid "Lazarus Project Info (*.lpi)|*.lpi|All Files|*.*"
-msgstr "Informazioni progetto Lazarus (*.lpi)|*.lpi|Tutti i file|*.*"
 
 #: lazarusidestrconsts:locwndsrceditor
 msgid "Lazarus Source Editor"
