replaced save all tool button  from Zryndin
 SVN 6920@trunk

--- a/images/README
+++ b/images/README
@@ -53,6 +53,7 @@ cd <lazarusdir>/images/
 
 cd <lazarusdir>/images/
 ../tools/lazres laz_images.lrs btn_*.xpm pkg_*.xpm menu/menu_*.xpm codeexplorer/*.xpm designer/*.xpm
+rm ../main.ppu
 
 
 7. splash.lrs
